[package]
name = "sample-blockchain-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core blockchain dependencies
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
ed25519-dalek = "1.0"
rand = "0.8"
uuid = { version = "1.3", features = ["v4", "serde"] }

# Database
mysql = "24.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "chrono"] }

# API and Web
warp = "0.3"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-tungstenite = "0.19"
futures-util = "0.3"

# Security
bcrypt = "0.15"
argon2 = "0.5"
jwt = "0.16"
aes-gcm = "0.10"
hmac = "0.12"
sha-1 = "0.10"

# Hardware identification
sysinfo = "0.29"
cpuid = "0.1.1"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
config = "0.13"
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
